--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,13 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- ============================================================== -->
+    <!--        Google Signin                                           -->
+    <!-- ============================================================== -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="487090499442-3f7rkig3uo62l5jdia41ubhkd231iunr.apps.googleusercontent.com">
+
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
